2007-09-25  Petr Ovtchenkov  <ptr@island.corbina.net>

	* vshostmgr.h, vshostmgr.cc: try to connect to well-known hosts
	and/or become a server to establish virtual synchrony net;

	* ut/unit_test.cc: test for well-known hosts [nodes of virtual
	synchrony net];

	* lib/janus/ut/vt_operations.h, lib/janus/ut/vt_remote.cc: ditto;

	* libjanus: version 0.4.0.

2007-08-27  Petr Ovtchenkov  <ptr@island.corbina.net>

	* janus.h, janus.cc: hide methods, intended for internal
	protocol usage only;

	* vtime.h, vtime.cc: LeaveGroup added;

	* vshostmgr.h, vshostmgr.cc: trick with finalizer---event after
	that message queue free from VS_OUT_MEMBER events;

	* ut/unit_test.cc: move test suite to janus namespace;

	* ut/vt_object.cc, ut/vt_handler.cc, ut/VTmess_core.cc:
	idem;

	* ut/vt_operations.cc, ut/vt_operations.h, ut/vt_dispatch.cc:
	idem;

	* ut/vt_remote.cc: idem;

	* ut/unit_test.cc, ut/vt_remote.cc: test two groups and
	interprocess virtual synchrony;

2007-08-23  Petr Ovtchenkov  <ptr@island.corbina.net>

	* janus.h, janus.cc: Janus code moved from vtime.h, vtime.cc;

	* vtime.h, vtime.cc: Janus code moved to janus.h, janus.cc;

	* ut/vt_object.cc, ut/vt_handler.cc, ut/VTmess_core.cc: idem;

	* ut/vt_dispatch.cc: idem;

	* Makefile.inc: idem;

	* libjanus: version 0.3.0;

	* vshostmgr.h, vshostmgr.cc: object for management virtual syncrony
	processes;

	* vshostmgr.h, vshostmgr.cc, janus.h, janus.cc, vtime.h, vtime.cc:
	procedure of entry into group with remote virtual synchrony objects;
	
	* ut/vt_remote.cc: test for interprocess virtual synchrony,
	entry into group.

2007-08-17  Petr Ovtchenkov  <yeti@yandex-team.ru>

	* vtime.h: use available variant of hash_map/hash_set or
	unordered_map/unordered_set.

2007-08-17  Petr Ovtchenkov  <ptr@island.corbina.net>

	* vtime.cc, vtime.h: namespace vt moved to janus; VTDispatcher
	renamed to Janus; VTmess renamed to VSmess.
	
2007-08-16  Petr Ovtchenkov  <ptr@island.corbina.net>
